--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ readme = "README.md"
 [dependencies]
 chrono = "0.4.43"
 ordered-float = "5.1.0"
+rust_decimal = "1.40.0"
 uuid = { version = "1.20.0", features = ["v4"] }
